maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: not found: value x
    for (i<-1 to x) {
                 ^