maze.lessons.maze.island.IslandMaze.scala.code
def nord() {
  while (getY()>0) {
    while (estFaceMur()) {
      droite()
    }
    avance()
    for (i<-1 to x) {
      gauche()
    }
  }  
}



def keepHandOnSideWall() {
gauche()
  if (estFaceMur()) {
    while(estFaceMur()) {
      droite()
    }
    avance()
  }
  else {
    avance()
  }
}




override def run() {
  nord()
while (!estSurBiscuit()) {
 keepHandOnSideWall()
}
  prendBiscuit() }